# GapClean

./: .gitignore  404.html  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  gapclean  gapclean.py  gapclean.sh  index.html  meta.yaml  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
advanced/chunking/: index.html
advanced/memory/: index.html
advanced/performance/: index.html
api/reference/: index.html
bucket/: gapclean.py  remove_newline.pl
changelog/: index.html
conservation_code/: score_conservation.py
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  installation.md  paper.md  quickstart.md
docs/advanced/: chunking.md  memory.md  performance.md
docs/api/: reference.md
docs/usage/: entropy-mode.md  seed-mode.md  threshold-mode.md
examples/: visualization_tutorial.ipynb
gapclean/: __init__.py  formats.py  gapclean.py
installation/: index.html
paper/: index.html
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test_edge_cases.py  test_flatten_fasta.py  test_gapclean_entropy.py  test_gapclean_seed.py  test_gapclean_threshold.py  test_integration.py  test_validation.py
usage/entropy-mode/: index.html
usage/seed-mode/: index.html
usage/threshold-mode/: index.html
