[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gapclean"
dynamic = ["version"]
description = "Clean up large gappy multiple sequence alignments."
readme = "README.md"

authors = [
  { name = "Aarya Venkat, PhD" },
]

requires-python = ">=3.8"

dependencies = [
  "tqdm",
  "numpy",
  "biopython>=1.80"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
keywords = ["sequence alignment", "bioinformatics, computational biology, protein"]

[project.scripts]
gapclean = "gapclean.gapclean:main"

[project.urls]
Github = "https://github.com/arikat/GapClean"
Homepage = "https://aaryakat.com"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[tool.setuptools.dynamic]
version = {attr = "gapclean.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["gapclean*"]
exclude = ["tests*", "paper*", "site*", "docs*", "examples*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["gapclean"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP"]
